# fortnox_time_reporter

./: default.nix  flake.nix
cli/: default.nix  fortnox_cli.py  setup.py
gui/: README.md  default.nix  meson.build  org.ripxorip.fortnox_time_reporter.json
gui/data/: meson.build  org.ripxorip.fortnox_time_reporter.appdata.xml.in  org.ripxorip.fortnox_time_reporter.desktop.in  org.ripxorip.fortnox_time_reporter.gschema.xml
gui/data/icons/: meson.build
gui/po/: POTFILES  meson.build
gui/src/: fortnox_time_reporter-application.c  fortnox_time_reporter-application.h  fortnox_time_reporter-window.c  fortnox_time_reporter-window.h  fortnox_time_reporter-window.ui  fortnox_time_reporter.gresource.xml  main.c  meson.build
pygui/: app.py  default.nix  fortnox_time_reporter-window.ui  pygui.cmb
